# embeddedlabs

./: .gitignore
gpio/: CMakeLists.txt  LAB_02_GPIO_new.docx  lab2_student.c
gpio/solution/: lab2_soln.c
interrupt/: CMakeLists.txt  LAB_03_INTERRUPT new.pdf.docx  lab3_student.c
interrupt/solution/: lab3_soln.c
pwm/: CMakeLists.txt  LAB_04_TIMER & PWM_new.docx  checker.c  checker.h  pwm_lab.c  pwm_lab_student.c
